--- a/fridge/.project
+++ b/fridge/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hs-fridge</name>
+	<name>fridge</name>
 	<comment></comment>
 	<projects>
 	</projects>
